--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "zod-to-json-schema": "^3.24.5"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.25.0",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@types/node": "^22.14.0",
     "@typescript-eslint/eslint-plugin": "^8.29.1",
@@ -41,6 +43,7 @@
     "eslint": "^9.24.0",
     "eslint-config-prettier": "^10.1.1",
     "eslint-plugin-prettier": "^5.2.6",
+    "globals": "^16.0.0",
     "json-schema-to-zod": "^2.6.1",
     "prettier": "^3.5.3",
     "typescript": "^5.8.3",
