--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.9.0",
     "@scarf/scarf": "^1.4.0",
-    "axios": "^1.8.4",
+    "axios": "1.12.0",
     "zod-to-json-schema": "^3.24.5"
   },
   "devDependencies": {
